--- a/editor/style.css
+++ b/editor/style.css
@@ -78,7 +78,11 @@ body {
 #export-modal-body {
     font-family: "Lucida Console", Monaco, monospace;
     width: 100%;
+    height: 256px;
     resize: none;
+    border: none; 
+    margin: 0px;
+    overflow-y: scroll;
 }
 
 #help-modal .modal-dialog {
