--- a/demos/forest/style.css
+++ b/demos/forest/style.css
@@ -6,4 +6,13 @@ body {
 #render-canvas {
     width: 100%;
     height: 100%;
+    cursor: none;
+}
+
+#help {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    padding: 8px;
+    color: gray;
 }
