finished conversion to minecraft camera

--- a/editor/style.css
+++ b/editor/style.css
@@ -84,6 +84,10 @@ body {
     overflow-y: scroll;
 }
 
+.monospace {
+    font-family: "Lucida Console", Monaco, monospace;
+}
+
 #help-modal .modal-dialog {
     width: 50%;
 }
