added color picker

--- a/editor/style.css
+++ b/editor/style.css
@@ -116,3 +116,11 @@ body {
 .clickable {
     cursor: pointer;
 }
+
+#color-picker {
+    padding: 0px;
+    border: none;
+    margin: 0px;
+    width: 16px;
+    height: 16px;
+}
